--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "react": "^19.2.1",
-    "react-dom": "^19.2.1",
     "react-router-dom": "^7.10.0",
     "lucide-react": "^0.555.0",
-    "framer-motion": "^12.23.25"
+    "framer-motion": "^12.23.25",
+    "@google/genai": "^1.31.0",
+    "react-dom": "^19.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
